manifests/adguard-home/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 80
            - containerPort: 53
