manifests/adguard-home/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
spec:
  selector:
    app: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
